--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio historia</title>
+    <title>La Encrucijada del Tiempo</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+
+    <h1>La Encrucijada del Tiempo</h1>
+
+    <img src="./img/intro.jpg" alt="Habitación " width="400">
+
+    <p>En esta historia, eres un estudiante universitario de bioinformática apasionado por la física cuántica. Una noche, mientras trabajas en tu proyecto de investigación en el laboratorio, una extraña energía se libera. Una grieta en el tejido del tiempo se abre frente a ti, revelando un portal que parece conducir a través de las eras.</p>
+
+    <p>Te encuentras en una encrucijada donde cada decisión que tomes afectará tu viaje a través del tiempo. ¿Cómo manejarás esta situación única que has desencadenado?</p>
+
+    <h2>Decisiones Iniciales:</h2>
+
+    <ul>
+        <li><strong>A.</strong> <a href="./A/A.html">Experimentar con el portal.</a></li>
+        <li><strong>B.</strong> <a href="./B/B.html">Buscar información sobre viajes en el tiempo antes de tomar una decisión.</a></li>
+    </ul>
 </body>
 </html>
