--- a/html/A/A1/A1.html
+++ b/html/A/A1/A1.html
@@ -9,10 +9,12 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../img/A1.jpg" alt="Habitación " width="400">
 
-    <p>Al haber elegido ingresar al portal sin dudar, te encuentras ahora en un lugar desconocido y fascinante. Las luces y sombras juegan en patrones incomprensibles a tu alrededor, mientras te sumerges más profundamente en esta realidad temporal. Sin embargo, la situación se vuelve aún más intrigante cuando te enfrentas a dos opciones cruciales:</p>
+    <p>Al haber elegido ingresar al portal sin dudar, te sumerges completamente en el flujo temporal y de repente te encuentras en un futuro distópico desconcertante. Las calles desoladas y los edificios en ruinas te rodean, revelando un mundo que ha sucumbido a la decadencia y la opresión.</p>
 
+    <p>En este futuro sombrío, te das cuenta de que tu decisión impulsiva te ha llevado a una realidad desafiante ya que ves incluso resistencias en este futuro que viven en una lucha. Te encuentras solo, enfrentándote a un paisaje devastado y a los restos de una sociedad que alguna vez fue próspera.</p>
+    
     <h2>Decisiones:</h2>
 
     <ul>
