--- a/html/A/A.html
+++ b/html/A/A.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../img/A.jpg" alt="Habitación " width="400">
 
     <p>Al decidir experimentar con el portal, te sumerges en lo desconocido con determinación. El paso hacia el portal te envuelve en una energía indescriptible, y de repente, te encuentras en un lugar que desafía toda lógica. Los colores danzan a tu alrededor, y la sensación de movimiento temporal te deja aturdido.</p>
 
@@ -18,8 +18,8 @@
     <h2>Decisiones:</h2>
 
     <ul>
-        <li><strong>A.</strong> <a href="">Ingresar al portal sin dudar.</a></li>
-        <li><strong>B.</strong> <a href="">Analizar el portal antes de decidir entrar.</a></li>
+        <li><strong>A.</strong> <a href="./A1/A1.html">Ingresar al portal sin dudar.</a></li>
+        <li><strong>B.</strong> <a href="./A2/A2.html">Analizar el portal antes de decidir entrar.</a></li>
     </ul>
 </body>
 </html>
