--- a/html/B/B1/B1.html
+++ b/html/B/B1/B1.html
@@ -11,13 +11,15 @@
 
     <img src="./img/intro.jpg" alt="Habitación " width="400">
 
-    <p>Al elegir la opción B, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes temporales. Mientras te sumerges en la información, te das cuenta de dos enfoques principales:</p>
+    <p>Al tomar esta decisión y explorar la Teoría Cuántica del Tiempo, te sumerges en una profunda investigación sobre paradojas temporales. Descubres información crucial que detalla las complejidades y peligros asociados con la manipulación del tiempo. Mientras absorbes este conocimiento, te enfrentas a la realidad de que incluso el menor error podría desencadenar consecuencias impredecibles.</p>
 
-    <h2>Decisiones:</h2>
+    <p>Ahora, con una comprensión más profunda de las paradojas temporales, te encuentras en una posición única para tomar decisiones informadas. Las advertencias y precauciones resonan en tu mente mientras consideras las siguientes opciones:</p>
 
     <ul>
-        <li><strong>A.</strong> <a href="">Teoría Cuántica del Tiempo.</a></li>
-        <li><strong>B.</strong> <a href="">Consultar a Expertos en Paradojas Temporales.</a></li>
+        <li><strong>A.</strong> <a href="">Utilizar la información para evitar paradojas.</a></li>
+        <li><strong>B.</strong> <a href="">Ignorar las advertencias y probar suerte.</a></li>
     </ul>
+    
+    <p>Te encuentras en una encrucijada crítica, armado con el conocimiento sobre paradojas temporales. ¿Optarás por la precaución y utilizarás la información para evitar paradojas, o ignorarás las advertencias y te aventurarás en la incertidumbre? Tu elección determinará el curso de tu viaje temporal.</p>
 </body>
 </html>
