--- a/html/B/B1/B1a/B1a.html
+++ b/html/B/B1/B1a/B1a.html
@@ -11,13 +11,6 @@
 
     <img src="./img/intro.jpg" alt="Habitación " width="400">
 
-    <p>Al elegir la opción B, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes temporales. Mientras te sumerges en la información, te das cuenta de dos enfoques principales:</p>
-
-    <h2>Decisiones:</h2>
-
-    <ul>
-        <li><strong>A.</strong> <a href="">Teoría Cuántica del Tiempo.</a></li>
-        <li><strong>B.</strong> <a href="">Consultar a Expertos en Paradojas Temporales.</a></li>
-    </ul>
+    <p>Tomando la decisión de utilizar la información para evitar paradojas, te sumerges en experimentos controlados y meticulosos. Diseñas cuidadosamente cada viaje temporal, implementando salvaguardias para eludir paradojas. A lo largo de tus travesías, logras evitar con éxito situaciones riesgosas, convirtiéndote en un observador silencioso del flujo del tiempo. Tu conocimiento es respetado, pero decides limitar tu intervención, convirtiéndote en un testigo de los secretos temporales sin alterar su curso natural. Tu historia se teje entre la cautela y la maravilla temporal.</p>
 </body>
 </html>
