--- a/html/B/B1/B1b/B1b.html
+++ b/html/B/B1/B1b/B1b.html
@@ -11,13 +11,6 @@
 
     <img src="./img/intro.jpg" alt="Habitación " width="400">
 
-    <p>Al elegir la opción B, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes temporales. Mientras te sumerges en la información, te das cuenta de dos enfoques principales:</p>
-
-    <h2>Decisiones:</h2>
-
-    <ul>
-        <li><strong>A.</strong> <a href="">Teoría Cuántica del Tiempo.</a></li>
-        <li><strong>B.</strong> <a href="">Consultar a Expertos en Paradojas Temporales.</a></li>
-    </ul>
+    <p>Al tomar la decisión de ignorar las advertencias y probar suerte, te lanzas audazmente a experimentos sin restricciones. Ignorando las precauciones, tus acciones causan una paradoja temporal irreversible. El tejido del tiempo se distorsiona, desencadenando consecuencias impredecibles y desafiantes. A medida que la paradoja se manifiesta, te encuentras atrapado en un torbellino temporal sin salida. Tu historia se convierte en la crónica de un arriesgado viaje que, desafortunadamente, resulta en un destino marcado por la imprevisibilidad y la permanencia de una paradoja irreversible.</p>
 </body>
 </html>
