--- a/html/B/B2/B2a/B2a.html
+++ b/html/B/B2/B2a/B2a.html
@@ -11,13 +11,7 @@
 
     <img src="./img/intro.jpg" alt="Habitación " width="400">
 
-    <p>Al elegir la opción B, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes temporales. Mientras te sumerges en la información, te das cuenta de dos enfoques principales:</p>
+    <p>Tras haber decidido buscar la solución más segura, trabajaste diligentemente con el profesor de física cuántica. Juntos, desarrollaron un método seguro para cerrar el portal, evitando cualquier riesgo de paradojas temporales. Tu enfoque cauteloso y metódico se tradujo en un cierre exitoso del portal, ganándote reconocimiento en la comunidad científica. Ahora, como experto en manipulación temporal segura, llevas contigo el legado de haber resuelto los misterios temporales de manera responsable.</p>
 
-    <h2>Decisiones:</h2>
-
-    <ul>
-        <li><strong>A.</strong> <a href="">Teoría Cuántica del Tiempo.</a></li>
-        <li><strong>B.</strong> <a href="">Consultar a Expertos en Paradojas Temporales.</a></li>
-    </ul>
 </body>
 </html>
