--- a/html/B/B2/B2b/B2b.html
+++ b/html/B/B2/B2b/B2b.html
@@ -11,13 +11,7 @@
 
     <img src="./img/intro.jpg" alt="Habitación " width="400">
 
-    <p>Al elegir la opción B, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes temporales. Mientras te sumerges en la información, te das cuenta de dos enfoques principales:</p>
+    <p>Tras haber decidido ignorar la advertencia del profesor y seguir experimentando, desencadenaste eventos impredecibles en el tiempo. Tus audaces experimentos provocaron distorsiones temporales, generando consecuencias incontrolables. La realidad se ve afectada, y te encuentras atrapado en una serie de eventos caóticos y cambiantes. Tu historia se convierte en un testimonio de los riesgos de ignorar las advertencias, marcada por la imprevisibilidad y la incertidumbre temporal.</p>
 
-    <h2>Decisiones:</h2>
-
-    <ul>
-        <li><strong>A.</strong> <a href="">Teoría Cuántica del Tiempo.</a></li>
-        <li><strong>B.</strong> <a href="">Consultar a Expertos en Paradojas Temporales.</a></li>
-    </ul>
 </body>
 </html>
