A1 path completed and corrected

--- a/html/A/A1/A1.html
+++ b/html/A/A1/A1.html
@@ -18,8 +18,8 @@
     <h2>Decisiones:</h2>
 
     <ul>
-        <li><strong>A.</strong> <a href="">Unirte a la resistencia en el futuro distópico.</a></li>
-        <li><strong>B.</strong> <a href="">Intentar cerrar el portal y revertir el daño.</a></li>
+        <li><strong>A.</strong> <a href="./A1a/A1a.html">Unirte a la resistencia en el futuro distópico.</a></li>
+        <li><strong>B.</strong> <a href="./A1b/A1b.html">Intentar cerrar el portal y revertir el daño.</a></li>
     </ul>
 </body>
 </html>
