--- a/html/A/A1/A1a/A1a.html
+++ b/html/A/A1/A1a/A1a.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../../img/A1a.jpeg" alt="Habitación " width="400">
 
     <p>Al unirte a la resistencia en el futuro distópico, te conviertes en el arquitecto del cambio. Utilizando tu conocimiento temporal, lideras la rebelión con astucia y determinación. Después de intensos enfrentamientos, logras estabilizar el tiempo y cerrar el portal. El futuro, una vez sombrío, se transforma en un lugar de esperanza y libertad. Eres recordado como el héroe temporal que alteró el curso de la historia y despides el pasado con un nuevo comienzo.</p>
 
