--- a/html/A/A2/A2.html
+++ b/html/A/A2/A2.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../img/A2.jpeg" alt="Habitación " width="400">
 
     <p>Al haber elegido analizar el portal antes de decidir entrar, te sumerges en una observación meticulosa de las complejidades del entorno temporal. Tu cautela y paciencia te permiten comprender mejor la naturaleza del portal. Mientras estudias los patrones energéticos y las fluctuaciones en el espacio-tiempo, te sientes más preparado para tomar decisiones informadas.</p>
 
