--- a/html/A/A1/A1b/A1b.html
+++ b/html/A/A1/A1b/A1b.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../../img/A1b.jpeg" alt="Habitación " width="400">
 
     <p>Intentaste cerrar el portal para revertir el daño, pero cada esfuerzo solo complicó más las cosas. El tejido del tiempo se volvió inestable, generando bucles temporales incontrolables. Te encuentras atrapado en una paradoja, atrapado en un estado perpetuo de incertidumbre temporal. Tu intento de corregir el pasado termina en una espiral de caos temporal sin fin.</p>
     
