--- a/html/A/A1/A1b/A1b.html
+++ b/html/A/A1/A1b/A1b.html
@@ -13,5 +13,6 @@
 
     <p>Intentaste cerrar el portal para revertir el daño, pero cada esfuerzo solo complicó más las cosas. El tejido del tiempo se volvió inestable, generando bucles temporales incontrolables. Te encuentras atrapado en una paradoja, atrapado en un estado perpetuo de incertidumbre temporal. Tu intento de corregir el pasado termina en una espiral de caos temporal sin fin.</p>
     
+    <p>Esta tragedia temporal se convierte en tu destino, una eterna travesía sin rumbo fijo, marcada por la imprevisibilidad y la desorientación. Tu historia termina como una advertencia sobre las consecuencias impredecibles de interferir con el tejido del tiempo.</p>
 </body>
 </html>
