--- a/html/A/A2/A2.html
+++ b/html/A/A2/A2.html
@@ -13,13 +13,13 @@
 
     <p>Al haber elegido analizar el portal antes de decidir entrar, te sumerges en una observación meticulosa de las complejidades del entorno temporal. Tu cautela y paciencia te permiten comprender mejor la naturaleza del portal. Mientras estudias los patrones energéticos y las fluctuaciones en el espacio-tiempo, te sientes más preparado para tomar decisiones informadas.</p>
 
-    <p>Ahora, te encuentras en una encrucijada temporal, enfrentando dos opciones:</p>
+    <p>Tras horas de estudio al portal, encuentras una realidad paralela pacífica, por lo que ahora enfrentas dos opciones:</p>
 
     <h2>Decisiones:</h2>
 
     <ul>
-        <li><strong>A.</strong> <a href="">Explorar la realidad distópica</a></li>
-        <li><strong>B.</strong> <a href="">Regresar al portal original.</a></li>
+        <li><strong>A.</strong> <a href="./A2a/A2a.html">Explorar la realidad paralela</a></li>
+        <li><strong>B.</strong> <a href="./A2b/A2b.html">Regresar al portal original.</a></li>
     </ul>
 </body>
 </html>
