--- a/html/A/A2/A2b/A2b.html
+++ b/html/A/A2/A2b/A2b.html
@@ -9,10 +9,10 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../../img/A2b.jpeg" alt="Habitación " width="400">
 
-    <p>Al regresar al portal original, tus intentos de cerrar la grieta temporal desencadenan una serie de eventos catastróficos. La complejidad del tejido temporal te atrapa en una espiral incontrolable de portales que te arrojan a diferentes épocas y realidades.</p>
-    <p>Te encuentras perdido en una odisea temporal sin fin, enfrentándote a desafíos constantes y presenciando eventos que desafían toda lógica. La incapacidad para controlar el flujo del tiempo te sumerge en un destino trágico, ya que quedas atrapado en una existencia errante a través de las eras, sin un hogar ni un momento fijo en el tiempo.</p>
-    <p>Esta tragedia temporal se convierte en tu destino, una eterna travesía sin rumbo fijo, marcada por la imprevisibilidad y la desorientación. Tu historia termina como una advertencia sobre las consecuencias impredecibles de interferir con el tejido del tiempo.</p>
+    <p>Al decidir ser más cauteloso, encontraste una posibilidad de viajar en el tiempo. Haz logrado lo que en un momento se creía imposible para la sociedad. Ahora, eres el único con el poder para abrir y cerrar portales gracias a que los estudiaste primero. Tras distintos estudios que realizaste, lograste comprender el funcionamiento de los portales relacionados con la física más compleja existente.</p>
+
+    <p>Ahora, con esta oportunidad en donde eres el único que sabe de lo que eres capaz de hacer, disfrutas el resto de tu vida con un don único. Eres feliz, lograste el mejor final de todos.</p>
 </body>
 </html>
