--- a/html/A/A2/A2a/A2a.html
+++ b/html/A/A2/A2a/A2a.html
@@ -9,9 +9,10 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../../img/A2a.jpeg" alt="Habitación " width="400">
 
-    <p>Al aventurarte en la realidad distópica, te unes a la resistencia y, utilizando tus habilidades temporales, cambias el curso del futuro. Desmantelas las estructuras opresoras y restauras la esperanza en la sociedad. En agradecimiento, la resistencia te guía hacia una ubicación especial donde encuentras un refugio, algo parecido a lo que podrías llamar tu hogar ideal. Te conviertes en una leyenda temporal, dejando un legado duradero. Finalmente, te despides, sabiendo que tu intervención marcó la diferencia.</p>
+    <p>Al explorar esta realidad paralela, te topas con que este mundo pacífico en realidad solo es un mundo donde todo se vuelve una monotonía. Caes en este mundo pensando en encontrar paz, pero el exceso de esta con el tiempo se vuelve repetitiva y te produce loquera.</p>
 
+    <p>Tratas de huir, pero al momento de buscar el portal, este nunca aparece. Quedaste atrapado, rodeado de muchas personas que actúan como robots pacíficos que no le dan emoción a tu vida, por lo que solo esperas el fin de tu vida para quitarte esa locura.</p>
 </body>
 </html>
