Images and track of story created to B1

--- a/html/B/B1/B1a/B1a.html
+++ b/html/B/B1/B1a/B1a.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../../img/B1a.jpeg" alt="Habitación " width="400">
 
     <p>Tomando la decisión de utilizar la información para evitar paradojas, te sumerges en experimentos controlados y meticulosos. Diseñas cuidadosamente cada viaje temporal, implementando salvaguardias para eludir paradojas. A lo largo de tus travesías, logras evitar con éxito situaciones riesgosas, convirtiéndote en un observador silencioso del flujo del tiempo. Tu conocimiento es respetado, pero decides limitar tu intervención, convirtiéndote en un testigo de los secretos temporales sin alterar su curso natural. Tu historia se teje entre la cautela y la maravilla temporal.</p>
 </body>
