--- a/html/B/B1/B1b/B1b.html
+++ b/html/B/B1/B1b/B1b.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../../img/B1b.jpeg" alt="Habitación " width="400">
 
     <p>Al tomar la decisión de ignorar las advertencias y probar suerte, te lanzas audazmente a experimentos sin restricciones. Ignorando las precauciones, tus acciones causan una paradoja temporal irreversible. El tejido del tiempo se distorsiona, desencadenando consecuencias impredecibles y desafiantes. A medida que la paradoja se manifiesta, te encuentras atrapado en un torbellino temporal sin salida. Tu historia se convierte en la crónica de un arriesgado viaje que, desafortunadamente, resulta en un destino marcado por la imprevisibilidad y la permanencia de una paradoja irreversible.</p>
 </body>
