--- a/html/B/B.html
+++ b/html/B/B.html
@@ -9,15 +9,15 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../img/B.jpeg" alt="Habitación " width="400">
 
-    <p>Al tomar esta decisión, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes temporales. Mientras te sumerges en la información, te das cuenta de dos enfoques principales:</p>
+    <p>Al tomar esta decisión, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes temporales. Mientras te sumerges en la información, ciertos datos se vuelve más complejos, por lo que tienes que decidir qué será más de tu ayuda:</p>
 
     <h2>Decisiones:</h2>
 
     <ul>
-        <li><strong>A.</strong> <a href="">Investigar en la biblioteca de la universidad.</a></li>
-        <li><strong>B.</strong> <a href="">Consultar a un profesor de física cuántica.</a></li>
+        <li><strong>A.</strong> <a href="./B1/B1.html">Investigar en la biblioteca de la universidad.</a></li>
+        <li><strong>B.</strong> <a href="./B2/B2.html">Consultar a un profesor de física cuántica.</a></li>
     </ul>
 </body>
 </html>
