--- a/html/B/B2/B2a/B2a.html
+++ b/html/B/B2/B2a/B2a.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../../img/B2a.jpeg" alt="Habitación " width="400">
 
     <p>Tras haber decidido buscar la solución más segura, trabajaste diligentemente con el profesor de física cuántica. Juntos, desarrollaron un método seguro para cerrar el portal, evitando cualquier riesgo de paradojas temporales. Tu enfoque cauteloso y metódico se tradujo en un cierre exitoso del portal, ganándote reconocimiento en la comunidad científica. Ahora, como experto en manipulación temporal segura, llevas contigo el legado de haber resuelto los misterios temporales de manera responsable.</p>
 
