--- a/html/B/B2/B2b/B2b.html
+++ b/html/B/B2/B2b/B2b.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="../../../img/B2b.jpeg" alt="Habitación " width="400">
 
     <p>Tras haber decidido ignorar la advertencia del profesor y seguir experimentando, desencadenaste eventos impredecibles en el tiempo. Tus audaces experimentos provocaron distorsiones temporales, generando consecuencias incontrolables. La realidad se ve afectada, y te encuentras atrapado en una serie de eventos caóticos y cambiantes. Tu historia se convierte en un testimonio de los riesgos de ignorar las advertencias, marcada por la imprevisibilidad y la incertidumbre temporal.</p>
 
