--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="./img/intro.jpg" alt="Habitación " width="400">
+    <img src="./img/intro.jpeg" alt="Habitación " width="400">
 
     <p>En esta historia, eres un estudiante universitario de bioinformática apasionado por la física cuántica. Una noche, mientras trabajas en tu proyecto de investigación en el laboratorio, una extraña energía se libera. Una grieta en el tejido del tiempo se abre frente a ti, revelando un portal que parece conducir a través de las eras.</p>
 
