--- a/html/A/A.html
+++ b/html/A/A.html
@@ -9,7 +9,7 @@
 
     <h1>La Encrucijada del Tiempo</h1>
 
-    <img src="../img/A.jpg" alt="Habitación " width="400">
+    <img src="../img/A.jpeg" alt="Habitación " width="400">
 
     <p>Al decidir experimentar con el portal, te sumerges en lo desconocido con determinación. El paso hacia el portal te envuelve en una energía indescriptible, y de repente, te encuentras en un lugar que desafía toda lógica. Los colores danzan a tu alrededor, y la sensación de movimiento temporal te deja aturdido.</p>
 
