Adding end tags and descriptions

--- a/html/A/A1/A1b/A1b.html
+++ b/html/A/A1/A1b/A1b.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../../img/A1b.jpeg" alt="Habitación " width="400">
 
-    <p>Intentaste cerrar el portal para revertir el daño, pero cada esfuerzo solo complicó más las cosas. El tejido del tiempo se volvió inestable, generando bucles temporales incontrolables. Te encuentras atrapado en una paradoja, atrapado en un estado perpetuo de incertidumbre temporal. Tu intento de corregir el pasado termina en una espiral de caos temporal sin fin.</p>
-    
-    <p>Esta tragedia temporal se convierte en tu destino, una eterna travesía sin rumbo fijo, marcada por la imprevisibilidad y la desorientación. Tu historia termina como una advertencia sobre las consecuencias impredecibles de interferir con el tejido del tiempo.</p>
+    <p>Intentaste cerrar el portal para revertir el daño, pero cada esfuerzo solo complicó más las cosas. El tejido del
+        tiempo se volvió inestable, generando bucles temporales incontrolables. Te encuentras atrapado en una paradoja,
+        atrapado en un estado perpetuo de incertidumbre temporal. Tu intento de corregir el pasado termina en una
+        espiral de caos temporal sin fin.</p>
+
+    <p>Esta tragedia temporal se convierte en tu destino, una eterna travesía sin rumbo fijo, marcada por la
+        imprevisibilidad y la desorientación. Tu historia termina como una advertencia sobre las consecuencias
+        impredecibles de interferir con el tejido del tiempo.</p>
+
+    <hr>
+    <footer>
+        <p><strong>¡Felicidades! Has alcanzado un final.</strong></p>
+        <p><strong>Vuelve a jugar para descubrir otras posibles historias y desenlaces </strong><a href="../../../index.html">dando click
+                aquí.</a></p>
+    </footer>
 </body>
+
 </html>
