--- a/html/A/A2/A2.html
+++ b/html/A/A2/A2.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../img/A2.jpeg" alt="Habitación " width="400">
 
-    <p>Al haber elegido analizar el portal antes de decidir entrar, te sumerges en una observación meticulosa de las complejidades del entorno temporal. Tu cautela y paciencia te permiten comprender mejor la naturaleza del portal. Mientras estudias los patrones energéticos y las fluctuaciones en el espacio-tiempo, te sientes más preparado para tomar decisiones informadas.</p>
+    <p>Al haber elegido analizar el portal antes de decidir entrar, te sumerges en una observación meticulosa de las
+        complejidades del entorno temporal. Tu cautela y paciencia te permiten comprender mejor la naturaleza del
+        portal. Mientras estudias los patrones energéticos y las fluctuaciones en el espacio-tiempo, te sientes más
+        preparado para tomar decisiones informadas.</p>
 
-    <p>Tras horas de estudio al portal, encuentras una realidad paralela pacífica, por lo que ahora enfrentas dos opciones:</p>
+    <p>Tras horas de estudio al portal, encuentras una realidad paralela pacífica, por lo que ahora enfrentas dos
+        opciones:</p>
 
     <h2>Decisiones:</h2>
 
@@ -22,4 +28,5 @@
         <li><strong>B.</strong> <a href="./A2b/A2b.html">Regresar al portal original.</a></li>
     </ul>
 </body>
+
 </html>
