--- a/html/A/A2/A2a/A2a.html
+++ b/html/A/A2/A2a/A2a.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../../img/A2a.jpeg" alt="Habitación " width="400">
 
-    <p>Al explorar esta realidad paralela, te topas con que este mundo pacífico en realidad solo es un mundo donde todo se vuelve una monotonía. Caes en este mundo pensando en encontrar paz, pero el exceso de esta con el tiempo se vuelve repetitiva y te produce loquera.</p>
+    <p>Al explorar esta realidad paralela, te topas con que este mundo pacífico en realidad solo es un mundo donde todo
+        se vuelve una monotonía. Caes en este mundo pensando en encontrar paz, pero el exceso de esta con el tiempo se
+        vuelve repetitiva y te produce loquera.</p>
 
-    <p>Tratas de huir, pero al momento de buscar el portal, este nunca aparece. Quedaste atrapado, rodeado de muchas personas que actúan como robots pacíficos que no le dan emoción a tu vida, por lo que solo esperas el fin de tu vida para quitarte esa locura.</p>
+    <p>Tratas de huir, pero al momento de buscar el portal, este nunca aparece. Quedaste atrapado, rodeado de muchas
+        personas que actúan como robots pacíficos que no le dan emoción a tu vida, por lo que solo esperas el fin de tu
+        vida para quitarte esa locura.</p>
+
+    <hr>
+    <footer>
+        <p><strong>¡Felicidades! Has alcanzado un final.</strong></p>
+        <p><strong>Vuelve a jugar para descubrir otras posibles historias y desenlaces </strong><a href="../../../index.html">dando click
+                aquí.</a></p>
+    </footer>
 </body>
+
 </html>
