--- a/html/A/A2/A2b/A2b.html
+++ b/html/A/A2/A2b/A2b.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../../img/A2b.jpeg" alt="Habitación " width="400">
 
-    <p>Al decidir ser más cauteloso, encontraste una posibilidad de viajar en el tiempo. Haz logrado lo que en un momento se creía imposible para la sociedad. Ahora, eres el único con el poder para abrir y cerrar portales gracias a que los estudiaste primero. Tras distintos estudios que realizaste, lograste comprender el funcionamiento de los portales relacionados con la física más compleja existente.</p>
+    <p>Al decidir ser más cauteloso, encontraste una posibilidad de viajar en el tiempo. Haz logrado lo que en un
+        momento se creía imposible para la sociedad. Ahora, eres el único con el poder para abrir y cerrar portales
+        gracias a que los estudiaste primero. Tras distintos estudios que realizaste, lograste comprender el
+        funcionamiento de los portales relacionados con la física más compleja existente.</p>
 
-    <p>Ahora, con esta oportunidad en donde eres el único que sabe de lo que eres capaz de hacer, disfrutas el resto de tu vida con un don único. Eres feliz, lograste el mejor final de todos.</p>
+    <p>Ahora, con esta oportunidad en donde eres el único que sabe de lo que eres capaz de hacer, disfrutas el resto de
+        tu vida con un don único. Eres feliz, lograste el mejor final de todos.</p>
+
+    <hr>
+    <footer>
+        <p><strong>¡Felicidades! Has alcanzado un final.</strong></p>
+        <p><strong>Vuelve a jugar para descubrir otras posibles historias y desenlaces </strong><a href="../../../index.html">dando click
+                aquí.</a></p>
+    </footer>
 </body>
+
 </html>
