--- a/html/B/B.html
+++ b/html/B/B.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../img/B.jpeg" alt="Habitación " width="400">
 
-    <p>Al tomar esta decisión, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes temporales. Mientras te sumerges en la información, ciertos datos se vuelve más complejos, por lo que tienes que decidir qué será más de tu ayuda:</p>
+    <p>Al tomar esta decisión, decides buscar información sobre viajes en el tiempo antes de tomar una decisión. Te
+        sumerges en la investigación, examinando textos antiguos y modernos que tratan sobre los misterios de los viajes
+        temporales. Mientras te sumerges en la información, ciertos datos se vuelve más complejos, por lo que tienes que
+        decidir qué será más de tu ayuda:</p>
 
     <h2>Decisiones:</h2>
 
@@ -20,4 +25,5 @@
         <li><strong>B.</strong> <a href="./B2/B2.html">Consultar a un profesor de física cuántica.</a></li>
     </ul>
 </body>
+
 </html>
