--- a/html/B/B1/B1b/B1b.html
+++ b/html/B/B1/B1b/B1b.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../../img/B1b.jpeg" alt="Habitación " width="400">
 
-    <p>Al tomar la decisión de ignorar las advertencias y probar suerte, te lanzas audazmente a experimentos sin restricciones. Ignorando las precauciones, tus acciones causan una paradoja temporal irreversible. El tejido del tiempo se distorsiona, desencadenando consecuencias impredecibles y desafiantes. A medida que la paradoja se manifiesta, te encuentras atrapado en un torbellino temporal sin salida. Tu historia se convierte en la crónica de un arriesgado viaje que, desafortunadamente, resulta en un destino marcado por la imprevisibilidad y la permanencia de una paradoja irreversible.</p>
+    <p>Al tomar la decisión de ignorar las advertencias y probar suerte, te lanzas audazmente a experimentos sin
+        restricciones. Ignorando las precauciones, tus acciones causan una paradoja temporal irreversible. El tejido del
+        tiempo se distorsiona, desencadenando consecuencias impredecibles y desafiantes. A medida que la paradoja se
+        manifiesta, te encuentras atrapado en un torbellino temporal sin salida. Tu historia se convierte en la crónica
+        de un arriesgado viaje que, desafortunadamente, resulta en un destino marcado por la imprevisibilidad y la
+        permanencia de una paradoja irreversible.</p>
+
+    <hr>
+    <footer>
+        <p><strong>¡Felicidades! Has alcanzado un final.</strong></p>
+        <p><strong>Vuelve a jugar para descubrir otras posibles historias y desenlaces </strong><a href="../../../index.html">dando click
+                aquí.</a></p>
+    </footer>
 </body>
+
 </html>
