--- a/html/B/B2/B2.html
+++ b/html/B/B2/B2.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../img/B2.jpeg" alt="Habitación " width="400">
 
-    <p>Tras consultar al profesor de física cuántica, te sumerges en una situación donde sus advertencias resuenan en tus pensamientos. El profesor te ha alertado sobre las consecuencias impredecibles de tus experimentos temporales. Te encuentras en una encrucijada crucial, enfrentando dos opciones.</p>
+    <p>Tras consultar al profesor de física cuántica, te sumerges en una situación donde sus advertencias resuenan en
+        tus pensamientos. El profesor te ha alertado sobre las consecuencias impredecibles de tus experimentos
+        temporales. Te encuentras en una encrucijada crucial, enfrentando dos opciones.</p>
 
     <h2>Decisiones:</h2>
 
@@ -20,4 +24,5 @@
         <li><strong>B.</strong> <a href="./B2b/B2b.html">Ignorar la advertencia y seguir experimentando.</a></li>
     </ul>
 </body>
+
 </html>
