--- a/html/B/B2/B2a/B2a.html
+++ b/html/B/B2/B2a/B2a.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../../img/B2a.jpeg" alt="Habitación " width="400">
 
-    <p>Tras haber decidido buscar la solución más segura, trabajaste diligentemente con el profesor de física cuántica. Juntos, desarrollaron un método seguro para cerrar el portal, evitando cualquier riesgo de paradojas temporales. Tu enfoque cauteloso y metódico se tradujo en un cierre exitoso del portal, ganándote reconocimiento en la comunidad científica. Ahora, como experto en manipulación temporal segura, llevas contigo el legado de haber resuelto los misterios temporales de manera responsable.</p>
+    <p>Tras haber decidido buscar la solución más segura, trabajaste diligentemente con el profesor de física cuántica.
+        Juntos, desarrollaron un método seguro para cerrar el portal, evitando cualquier riesgo de paradojas temporales.
+        Tu enfoque cauteloso y metódico se tradujo en un cierre exitoso del portal, ganándote reconocimiento en la
+        comunidad científica. Ahora, como experto en manipulación temporal segura, llevas contigo el legado de haber
+        resuelto los misterios temporales de manera responsable.</p>
 
+    <hr>
+    <footer>
+        <p><strong>¡Felicidades! Has alcanzado un final.</strong></p>
+        <p><strong>Vuelve a jugar para descubrir otras posibles historias y desenlaces </strong><a href="../../../index.html">dando click
+                aquí.</a></p>
+    </footer>
 </body>
+
 </html>
