--- a/html/B/B2/B2b/B2b.html
+++ b/html/B/B2/B2b/B2b.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../../img/B2b.jpeg" alt="Habitación " width="400">
 
-    <p>Tras haber decidido ignorar la advertencia del profesor y seguir experimentando, desencadenaste eventos impredecibles en el tiempo. Tus audaces experimentos provocaron distorsiones temporales, generando consecuencias incontrolables. La realidad se ve afectada, y te encuentras atrapado en una serie de eventos caóticos y cambiantes. Tu historia se convierte en un testimonio de los riesgos de ignorar las advertencias, marcada por la imprevisibilidad y la incertidumbre temporal.</p>
+    <p>Tras haber decidido ignorar la advertencia del profesor y seguir experimentando, desencadenaste eventos
+        impredecibles en el tiempo. Tus audaces experimentos provocaron distorsiones temporales, generando consecuencias
+        incontrolables. La realidad se ve afectada, y te encuentras atrapado en una serie de eventos caóticos y
+        cambiantes. Tu historia se convierte en un testimonio de los riesgos de ignorar las advertencias, marcada por la
+        imprevisibilidad y la incertidumbre temporal.</p>
 
+    <hr>
+    <footer>
+        <p><strong>¡Felicidades! Has alcanzado un final.</strong></p>
+        <p><strong>Vuelve a jugar para descubrir otras posibles historias y desenlaces </strong><a href="../../../index.html">dando click
+                aquí.</a></p>
+    </footer>
 </body>
+
 </html>
