--- a/html/A/A.html
+++ b/html/A/A.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../img/A.jpeg" alt="Habitación " width="400">
 
-    <p>Al decidir experimentar con el portal, te sumerges en lo desconocido con determinación. El paso hacia el portal te envuelve en una energía indescriptible, y de repente, te encuentras en un lugar que desafía toda lógica. Los colores danzan a tu alrededor, y la sensación de movimiento temporal te deja aturdido.</p>
+    <p>Al decidir experimentar con el portal, te sumerges en lo desconocido con determinación. El paso hacia el portal
+        te envuelve en una energía indescriptible, y de repente, te encuentras en un lugar que desafía toda lógica. Los
+        colores danzan a tu alrededor, y la sensación de movimiento temporal te deja aturdido.</p>
 
     <p>Ahora, te hallas en una encrucijada temporal, enfrentando dos opciones:</p>
 
@@ -22,4 +26,5 @@
         <li><strong>B.</strong> <a href="./A2/A2.html">Analizar el portal antes de decidir entrar.</a></li>
     </ul>
 </body>
+
 </html>
