--- a/html/A/A1/A1.html
+++ b/html/A/A1/A1.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../img/A1.jpg" alt="Habitación " width="400">
 
-    <p>Al haber elegido ingresar al portal sin dudar, te sumerges completamente en el flujo temporal y de repente te encuentras en un futuro distópico desconcertante. Las calles desoladas y los edificios en ruinas te rodean, revelando un mundo que ha sucumbido a la decadencia y la opresión.</p>
+    <p>Al haber elegido ingresar al portal sin dudar, te sumerges completamente en el flujo temporal y de repente te
+        encuentras en un futuro distópico desconcertante. Las calles desoladas y los edificios en ruinas te rodean,
+        revelando un mundo que ha sucumbido a la decadencia y la opresión.</p>
 
-    <p>En este futuro sombrío, te das cuenta de que tu decisión impulsiva te ha llevado a una realidad desafiante ya que ves incluso resistencias en este futuro que viven en una lucha. Te encuentras solo, enfrentándote a un paisaje devastado y a los restos de una sociedad que alguna vez fue próspera.</p>
-    
+    <p>En este futuro sombrío, te das cuenta de que tu decisión impulsiva te ha llevado a una realidad desafiante ya que
+        ves incluso resistencias en este futuro que viven en una lucha. Te encuentras solo, enfrentándote a un paisaje
+        devastado y a los restos de una sociedad que alguna vez fue próspera.</p>
+
     <h2>Decisiones:</h2>
 
     <ul>
@@ -22,4 +28,5 @@
         <li><strong>B.</strong> <a href="./A1b/A1b.html">Intentar cerrar el portal y revertir el daño.</a></li>
     </ul>
 </body>
+
 </html>
