--- a/html/A/A1/A1a/A1a.html
+++ b/html/A/A1/A1a/A1a.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../../img/A1a.jpeg" alt="Habitación " width="400">
 
-    <p>Al aventurarte en la realidad distópica, te unes a la resistencia y, utilizando tus habilidades temporales, cambias el curso del futuro. Desmantelas las estructuras opresoras y restauras la esperanza en la sociedad. En agradecimiento, la resistencia te guía hacia una ubicación especial donde encuentras un refugio, algo parecido a lo que podrías llamar tu hogar ideal. Te conviertes en una leyenda temporal, dejando un legado duradero.</p>
-    <p>En este futuro distópico, te conviertes en el arquitecto del cambio. Utilizando tu conocimiento temporal, lideras la rebelión con astucia y determinación. Después de intensos enfrentamientos, logras estabilizar el tiempo y cerrar el portal. El futuro, una vez sombrío, se transforma en un lugar de esperanza y libertad. Finalmente, te despides, sabiendo que tu intervención marcó la diferencia. Eres recordado como el héroe temporal que alteró el curso de la historia y despides el pasado con un nuevo comienzo.</p>
+    <p>Al aventurarte en la realidad distópica, te unes a la resistencia y, utilizando tus habilidades temporales,
+        cambias el curso del futuro. Desmantelas las estructuras opresoras y restauras la esperanza en la sociedad. En
+        agradecimiento, la resistencia te guía hacia una ubicación especial donde encuentras un refugio, algo parecido a
+        lo que podrías llamar tu hogar ideal. Te conviertes en una leyenda temporal, dejando un legado duradero.</p>
+    <p>En este futuro distópico, te conviertes en el arquitecto del cambio. Utilizando tu conocimiento temporal, lideras
+        la rebelión con astucia y determinación. Después de intensos enfrentamientos, logras estabilizar el tiempo y
+        cerrar el portal. El futuro, una vez sombrío, se transforma en un lugar de esperanza y libertad. Finalmente, te
+        despides, sabiendo que tu intervención marcó la diferencia. Eres recordado como el héroe temporal que alteró el
+        curso de la historia y despides el pasado con un nuevo comienzo.</p>
 
-
+    <hr>
+    <footer>
+        <p><strong>¡Felicidades! Has alcanzado un final.</strong></p>
+        <p><strong>Vuelve a jugar para descubrir otras posibles historias y desenlaces </strong><a href="../../../index.html">dando click
+                aquí.</a></p>
+    </footer>
 </body>
+
 </html>
