--- a/html/B/B1/B1.html
+++ b/html/B/B1/B1.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../img/B1.jpeg" alt="Habitación " width="400">
 
-    <p>Al tomar esta decisión y explorar la Teoría Cuántica del Tiempo, te sumerges en una profunda investigación sobre paradojas temporales. Descubres información crucial que detalla las complejidades y peligros asociados con la manipulación del tiempo. Mientras absorbes este conocimiento, te enfrentas a la realidad de que incluso el menor error podría desencadenar consecuencias impredecibles.</p>
+    <p>Al tomar esta decisión y explorar la Teoría Cuántica del Tiempo, te sumerges en una profunda investigación sobre
+        paradojas temporales. Descubres información crucial que detalla las complejidades y peligros asociados con la
+        manipulación del tiempo. Mientras absorbes este conocimiento, te enfrentas a la realidad de que incluso el menor
+        error podría desencadenar consecuencias impredecibles.</p>
 
-    <p>Ahora, con una comprensión más profunda de las paradojas temporales, te encuentras en una posición única para tomar decisiones informadas. Las advertencias y precauciones resonan en tu mente mientras consideras las siguientes opciones:</p>
+    <p>Ahora, con una comprensión más profunda de las paradojas temporales, te encuentras en una posición única para
+        tomar decisiones informadas. Las advertencias y precauciones resonan en tu mente mientras consideras las
+        siguientes opciones:</p>
 
     <ul>
         <li><strong>A.</strong> <a href="./B1a/B1a.html">Utilizar la información para evitar paradojas.</a></li>
         <li><strong>B.</strong> <a href="./B1b/B1b.html">Ignorar las advertencias y probar suerte.</a></li>
     </ul>
-    
-    <p>Te encuentras en una encrucijada crítica, armado con el conocimiento sobre paradojas temporales. ¿Optarás por la precaución y utilizarás la información para evitar paradojas, o ignorarás las advertencias y te aventurarás en la incertidumbre? Tu elección determinará el curso de tu viaje temporal.</p>
+
+    <p>Te encuentras en una encrucijada crítica, armado con el conocimiento sobre paradojas temporales. ¿Optarás por la
+        precaución y utilizarás la información para evitar paradojas, o ignorarás las advertencias y te aventurarás en
+        la incertidumbre? Tu elección determinará el curso de tu viaje temporal.</p>
 </body>
+
 </html>
