--- a/html/B/B1/B1a/B1a.html
+++ b/html/B/B1/B1a/B1a.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
     <h1>La Encrucijada del Tiempo</h1>
 
     <img src="../../../img/B1a.jpeg" alt="Habitación " width="400">
 
-    <p>Tomando la decisión de utilizar la información para evitar paradojas, te sumerges en experimentos controlados y meticulosos. Diseñas cuidadosamente cada viaje temporal, implementando salvaguardias para eludir paradojas. A lo largo de tus travesías, logras evitar con éxito situaciones riesgosas, convirtiéndote en un observador silencioso del flujo del tiempo. Tu conocimiento es respetado, pero decides limitar tu intervención, convirtiéndote en un testigo de los secretos temporales sin alterar su curso natural. Tu historia se teje entre la cautela y la maravilla temporal.</p>
+    <p>Tomando la decisión de utilizar la información para evitar paradojas, te sumerges en experimentos controlados y
+        meticulosos. Diseñas cuidadosamente cada viaje temporal, implementando salvaguardias para eludir paradojas. A lo
+        largo de tus travesías, logras evitar con éxito situaciones riesgosas, convirtiéndote en un observador
+        silencioso del flujo del tiempo. Tu conocimiento es respetado, pero decides limitar tu intervención,
+        convirtiéndote en un testigo de los secretos temporales sin alterar su curso natural. Tu historia se teje entre
+        la cautela y la maravilla temporal.</p>
+
+    <hr>
+    <footer>
+        <p><strong>¡Felicidades! Has alcanzado un final.</strong></p>
+        <p><strong>Vuelve a jugar para descubrir otras posibles historias y desenlaces </strong><a href="../../../index.html">dando click
+                aquí.</a></p>
+    </footer>
 </body>
+
 </html>
