--- a/html/index.html
+++ b/html/index.html
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Encrucijada del Tiempo</title>
 </head>
+
 <body>
 
-    <h1>La Encrucijada del Tiempo</h1>
+    <header>
+        <h1>La Encrucijada del Tiempo</h1>
+    </header>
+    
+    <article>
 
-    <img src="./img/intro.jpeg" alt="Habitación " width="400">
+        <details>
+            <summary>Instrucciones</summary>
+            <p>Este es un juego que variará según las decisiones que sean tomadas. Puedes obtener finales buenos o malos,
+                pero no olvides que cada final es una historia nueva, por lo que siempre puedes volver a iniciar.
+                Disfruta cada camino y ve como cada decision perjudica o mejora tu vida.</p>
+        </details>
 
-    <p>En esta historia, eres un estudiante universitario de bioinformática apasionado por la física cuántica. Una noche, mientras trabajas en tu proyecto de investigación en el laboratorio, una extraña energía se libera. Una grieta en el tejido del tiempo se abre frente a ti, revelando un portal que parece conducir a través de las eras.</p>
+        <figure>
+            <img src="./img/intro.jpeg" alt="Habitación " width="400">
+            <figcaption>Imágenes generadas por Dall-e</figcaption>
+        </figure>
 
-    <p>Te encuentras en una encrucijada donde cada decisión que tomes afectará tu viaje a través del tiempo. ¿Cómo manejarás esta situación única que has desencadenado?</p>
+        <p>En esta historia, eres un estudiante universitario de bioinformática apasionado por la física cuántica. Una
+            noche, mientras trabajas en tu proyecto de investigación en el laboratorio, una extraña energía se libera.
+            Una grieta en el tejido del tiempo se abre frente a ti, revelando un portal que parece conducir a través de
+            las eras.</p>
 
-    <h2>Decisiones Iniciales:</h2>
+        <p>Te encuentras en una encrucijada donde cada decisión que tomes afectará tu viaje a través del tiempo. ¿Cómo
+            manejarás esta situación única que has desencadenado?</p>
 
-    <ul>
-        <li><strong>A.</strong> <a href="./A/A.html">Experimentar con el portal.</a></li>
-        <li><strong>B.</strong> <a href="./B/B.html">Buscar información sobre viajes en el tiempo antes de tomar una decisión.</a></li>
-    </ul>
+        <h2>Decisiones Iniciales:</h2>
+
+        <ul>
+            <li><strong>A.</strong> <a href="./A/A.html">Experimentar con el portal.</a></li>
+            <li><strong>B.</strong> <a href="./B/B.html">Buscar información sobre viajes en el tiempo antes de tomar
+                    una decisión.</a></li>
+        </ul>
+
+    </article>
+
 </body>
+
 </html>
